# autoqa

./: .gitignore  PLAN.md  README.md  pyproject.toml  test_import.py  test_lifespan.py
.claude/: settings.local.json
autoqa/: prj_exception.py  prj_logger.py  utils.py
autoqa/api/: main.py  routes.py  schemas.py  services.py
autoqa/components/: clients.py  processors.py
autoqa/core/: config.py
autoqa/prompts/: README.md  add_labels_to_synthetic_input_generator.jinja2  coverage_evaluator-v2.jinja2  coverage_evaluator-v3-user.jinja2  coverage_evaluator-v3.jinja2  coverage_evaluator-v4.jinja2  coverage_evaluator-v5.jinja2  coverage_evaluator-v6.jinja2  coverage_evaluator.jinja2  decomposer-v2-user.jinja2  decomposer-v2.jinja2  decomposer-v3.jinja2  decomposer-v4.jinja2  decomposer.jinja2  hazard_final_assessor-v1.jinja2  hazard_h1_evaluator-v1.jinja2  hazard_h2_evaluator-v1.jinja2  hazard_h3_evaluator-v1.jinja2  hazard_h4_evaluator-v1.jinja2  hazard_h5_evaluator-v1.jinja2  hazard_synthesizer-v1.jinja2  rewrite-coverage-instructions.jinja2  single-test-aggregator-v2.jinja2  single-test-aggregator-v3.jinja2  single-test-aggregator-v4.jinja2  single-test-aggregator.jinja2  single-test-coverage-eval-v2.jinja2  single-test-coverage-eval-v3.jinja2  single-test-coverage-eval.jinja2  single-test-logical-steps-v2.jinja2  single-test-logical-steps-v3.jinja2  single-test-logical-steps.jinja2  single-test-prereqs-v2.jinja2  summarizer-v2.jinja2  (+16 more)
scripts/: call_pyjama_fastapi.py  generate_rtm_dataset.py  run_hazard_pipeline.py  startup_api.sh
tests/: conftest.py  helpers.py
(+59 files in other folders)
