[project]
name = "autoqa"
version = "0.1.0"
description = "Design Quality AI-Assisted DHF Reviewer - AI system for enhancing software quality review processes"
authors = [
    {name = "Daniel Sobczynski", email = "daniel_sobczynski@baxter.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "langgraph>=1.0",
  "langchain-core>=1.2",
  "langchain-openai>=1.1",
  "langchain-ollama>=1.0",
  "flatdict>=4.1.0",
  "matplotlib>=3.10.8",
  "openpyxl>=3.1.5",
  "python-dotenv>=1.2.2",
  "jinja2>=3.1.6",
  "langchain-aws>=1.4.0",
  "numpy>=2.4.2",
  "nest-asyncio>=1.6",
  "tqdm>=4.66",
  "fastapi[standard]>=0.115",
  "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that make real LLM API calls (deselect with -m 'not integration')",
]
testpaths = ["tests"]
python_classes = []

# Declaring a build system allows uv to install your project editably during sync.
# This does not publish anything by itself; it just makes local imports work cleanly.
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
